added uselocal db package

--- a/packages/data/useLocalDb/stories/sb.stories.mdx
+++ b/packages/data/useLocalDb/stories/sb.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs'
 import FunctionUsageExample from '../../../dataDisplay/showExample/FunctionUsageExample'
 import Button from '../../../input/Button/styles/1'
-import useLocalDb from '../'
+import useLocalDb from '../src'
 
 <Meta
   title='lib/data/useLocalDb'
