updated box import

--- a/packages/input/useOnClickOutside/stories/sb.stories.mdx
+++ b/packages/input/useOnClickOutside/stories/sb.stories.mdx
@@ -16,7 +16,7 @@ import useClickOutside from '@useweb/lib/input/useClickOutside'
 </Story>
 
 ```js
-import Box from '../../../dataDisplay/Box'
+import Box from '@useweb/box'
 import useClickOutside from '../'
 
 export default () => {
