--- a/packages/Introduction/stories/stories.mdx
+++ b/packages/Introduction/stories/stories.mdx
@@ -6,7 +6,7 @@ import { Meta } from '@storybook/addon-docs'
 
 ### @useweb/lib
 
-A library of utility functions, React components and hooks.
+A library of utilities, React components and hooks.
 
 ```sh
 npm i @useweb/lib
