--- a/packages/Introduction/stories/stories.mdx
+++ b/packages/Introduction/stories/stories.mdx
@@ -4,10 +4,6 @@ import { Meta } from '@storybook/addon-docs'
 
 ![banner](https://firebasestorage.googleapis.com/v0/b/useweb-lib.appspot.com/o/banners%2FBANNER.svg?alt=media&token=4243d31e-e0e0-4df8-a8c3-74ccb8d242ed)
 
-### @useweb/lib
+### @useweb
 
 A library of utilities, React components and hooks.
-
-```sh
-npm i @useweb/lib
-```
