--- a/packages/serverless/firebase/messaging/useFirebaseMessaging/stories/docs.mdx
+++ b/packages/serverless/firebase/messaging/useFirebaseMessaging/stories/docs.mdx
@@ -1,4 +1,4 @@
-# Firebase Push Notifications
+# Firebase Messaging
 
 ### Usage
 
@@ -87,5 +87,3 @@ self.addEventListener('notificationclick', (event) => {
 })
 
 ```
-
-4. Use `useFirebaseMessaging` to handle messages when app is in the foreground.
