--- a/packages/serverless/firebase/messaging/useFirebaseMessaging/stories/docs.mdx
+++ b/packages/serverless/firebase/messaging/useFirebaseMessaging/stories/docs.mdx
@@ -30,7 +30,13 @@ return (
 
 ### Setup
 
-1. Add provider to your app.
+1. Generate `vapidKey`
+
+- Open the Cloud Messaging tab of the Firebase console Settings pane and scroll to the Web configuration section.
+- In the Web Push certificates tab, find and select the link text, "import an existing key pair."
+- In the Import a key pair dialog, provide your public and private keys in the corresponding fields and click Import. The console displays the public key string and date added.
+
+2. Add provider to your app.
 
 ```js
 import { initializeApp } from 'firebase/app'
@@ -41,13 +47,17 @@ const firebaseApp = initializeApp(firebaseConfig)
 const messaging = getMessaging()
 
 return (
-  <FirebaseProvider firebaseApp={firebaseApp} messaging={messaging}>
+  <FirebaseProvider
+    firebaseApp={firebaseApp}
+    messaging={messaging}
+    messagingOptions={{ vapidKey: vapidKey }}
+  >
     <App />
   </FirebaseProvider>
 )
 ```
 
-2. Add `gcm_sender_id` property to `manifest.json` . Insert the value below AS IT IS, without changing anything.
+3. Add `gcm_sender_id` property to `manifest.json` . Insert the value below AS IT IS, without changing anything.
 
 ```json
 {
@@ -55,7 +65,7 @@ return (
 }
 ```
 
-3. Create [firebase-messaging-sw.js](https://firebase.google.com/docs/cloud-messaging/js/receive#web-v9_2)
+4. Create [firebase-messaging-sw.js](https://firebase.google.com/docs/cloud-messaging/js/receive#web-v9_2)
    file and add it to your public folder. This shows notitifications when the app is in the background.
 
 ```js
