--- a/packages/serverless/firebase/messaging/useFirebaseMessaging/stories/docs.mdx
+++ b/packages/serverless/firebase/messaging/useFirebaseMessaging/stories/docs.mdx
@@ -32,7 +32,7 @@ return (
 
 1. Generate `vapidKey`
 
-- Open the Cloud Messaging tab of the Firebase console Settings pane and scroll to the Web configuration section.
+- Open the [Cloud Messaging](https://console.firebase.google.com/project/_/settings/cloudmessaging) tab of the Firebase console Settings pane and scroll to the Web configuration section.
 - In the Web Push certificates tab, find and select the link text, "import an existing key pair."
 - In the Import a key pair dialog, provide your public and private keys in the corresponding fields and click Import. The console displays the public key string and date added.
 
