--- a/packages/utils/cloud/functions/firebase/useFirebaseFunctions/stories/docs.mdx
+++ b/packages/utils/cloud/functions/firebase/useFirebaseFunctions/stories/docs.mdx
@@ -3,21 +3,17 @@
 ### Usage
 
 ```js
-import useFirebaseMessaging from '@useweb/use-firebase-messaging'
+import useFirebaseFunctions from '@useweb/use-firebase-functions'
 
-useFirebaseMessaging({
-  onMessage: (message) => {
-    console.log({ message })
-  },
+useFirebaseFunctions({
+  name: 'helloWorld',
 })
 ```
-
-Optionally, you can add a global `onMessage` handler using `FirebaseProvider`.
 
 ```js
 return (
   <FirebaseProvider
-    messagingOptions={{
+    functionsOptions={{
       onMessage: (message) => {
         console.log({ message })
       },
@@ -30,70 +26,19 @@ return (
 
 ### Setup
 
-1. Generate `vapidKey`
-
-- Open the [Cloud Messaging](https://console.firebase.google.com/project/_/settings/cloudmessaging) tab of the Firebase console Settings pane and scroll to the Web configuration section.
-- In the Web Push certificates tab, find and select the link text, "import an existing key pair."
-- In the Import a key pair dialog, provide your public and private keys in the corresponding fields and click Import. The console displays the public key string and date added.
-
-2. Add provider to your app.
+1. Add provider to your app.
 
 ```js
 import { initializeApp } from 'firebase/app'
-import { getMessaging } from 'firebase/messaging'
+import { getMessaging } from 'firebase/functions'
 import { FirebaseProvider } from '@useweb/use-firebase'
 
 const firebaseApp = initializeApp(firebaseConfig)
-const messaging = getMessaging()
+const functions = getMessaging()
 
 return (
-  <FirebaseProvider
-    firebaseApp={firebaseApp}
-    messaging={messaging}
-    messagingOptions={{ vapidKey: vapidKey }}
-  >
+  <FirebaseProvider firebaseApp={firebaseApp} functions={functions}>
     <App />
   </FirebaseProvider>
 )
-```
-
-3. Add `gcm_sender_id` property to `manifest.json` . Insert the value below AS IT IS, without changing anything.
-
-```json
-{
-  "gcm_sender_id": "103953800507"
-}
-```
-
-4. Create [firebase-messaging-sw.js](https://firebase.google.com/docs/cloud-messaging/js/receive#web-v9_2)
-   file and add it to your public folder. This shows notitifications when the app is in the background.
-
-```js
-/* eslint-disable no-undef */
-importScripts('https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js');
-importScripts('https://www.gstatic.com/firebasejs/8.6.8/firebase-messaging.js');
-
-firebase.initializeApp(<firebaseConfig>)
-
-const messaging = firebase.messaging()
-
-messaging.onBackgroundMessage((payload) => {
-  console.log('[firebase-messaging-sw.js] Received background message ', payload)
-  const notificationTitle = payload.title
-  const notificationOptions = {
-    body: payload.body,
-    icon: payload.image,
-  }
-
-  self.registration.showNotification(notificationTitle,
-    notificationOptions);
-});
-
-self.addEventListener('notificationclick', (event) => {
-  if (event.action) {
-    clients.openWindow(event.action)
-  }
-  event.notification.close()
-})
-
 ```
