--- a/packages/utils/cloud/functions/firebase/useFirebaseFunction/stories/docs.mdx
+++ b/packages/utils/cloud/functions/firebase/useFirebaseFunction/stories/docs.mdx
@@ -3,9 +3,9 @@
 ### Usage
 
 ```js
-import useFirebaseFunctions from '@useweb/use-firebase-functions'
+import useFirebaseFunction from '@useweb/use-firebase-function'
 
-useFirebaseFunctions({
+useFirebaseFunction({
   name: 'helloWorld',
 })
 ```
