--- a/packages/serverless/firebase/messaging/useFirebaseMessaging/stories/docs.mdx
+++ b/packages/serverless/firebase/messaging/useFirebaseMessaging/stories/docs.mdx
@@ -36,7 +36,7 @@ return (
 - In the Web Push certificates tab, find and select the link text, "import an existing key pair."
 - In the Import a key pair dialog, provide your public and private keys in the corresponding fields and click Import. The console displays the public key string and date added.
 
-2. Add provider to your app.
+2. Add `FirebaseProvider` to your app.
 
 ```js
 import { initializeApp } from 'firebase/app'
