--- a/packages/serverless/firebase/functions/TestFirebaseFunction/stories/sb.stories.mdx
+++ b/packages/serverless/firebase/functions/TestFirebaseFunction/stories/sb.stories.mdx
@@ -1,17 +1,17 @@
 import { Meta, Story } from '@storybook/addon-docs'
-import TestFirebaseCloudFunction from '..'
+import TestFirebaseFunction from '..'
 
 <!-- /Users/jeremytenjo/Dev/tenjo-apps/lib/functions/index.js -->
 
 <Meta
-  title='Lib/dataDisplay/TestFirebaseCloudFunction'
+  title='Lib/dataDisplay/TestFirebaseFunction'
   args={{
     functionName: 'helloWorld',
     defaultData: { name: 'Jeremy' },
   }}
 />
 
-# TestFirebaseCloudFunction
+# TestFirebaseFunction
 
 #### Default
 
@@ -20,5 +20,5 @@ import TestFirebaseCloudFunction from '..'
 </Story>
 
 export const Template = (args) => {
-  return <TestFirebaseCloudFunction {...args} />
+  return <TestFirebaseFunction {...args} />
 }
