@useweb/use-firebase-messaging@1.3.1

--- a/packages/serverless/firebase/messaging/useFirebaseMessaging/stories/docs.mdx
+++ b/packages/serverless/firebase/messaging/useFirebaseMessaging/stories/docs.mdx
@@ -50,7 +50,7 @@ return (
   <FirebaseProvider
     firebaseApp={firebaseApp}
     messaging={messaging}
-    messagingOptions={{ vapidKey: vapidKey }}
+    messagingOptions={{ vapidKey }}
   >
     <App />
   </FirebaseProvider>
