--- a/packages/serverless/firebase/messaging/useFirebaseMessaging/stories/docs.mdx
+++ b/packages/serverless/firebase/messaging/useFirebaseMessaging/stories/docs.mdx
@@ -79,10 +79,10 @@ const messaging = firebase.messaging()
 
 messaging.onBackgroundMessage((payload) => {
   console.log('[firebase-messaging-sw.js] Received background message ', payload)
-  const notificationTitle = payload.title
+ const notificationTitle = payload.notification.title
   const notificationOptions = {
-    body: payload.body,
-    icon: payload.image,
+    body: payload.notification.body,
+    icon: payload.notification.icon || payload.notification.image,
   }
 
   self.registration.showNotification(notificationTitle,
