--- a/packages/data/useLocalDb/stories/sb.stories.mdx
+++ b/packages/data/useLocalDb/stories/sb.stories.mdx
@@ -1,6 +1,7 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs'
+
 import FunctionUsageExample from '../../../dataDisplay/showExample/FunctionUsageExample'
-import Button from '../../../input/Button/styles/1'
+import Button from '../../../input/Button/src'
 import useLocalDb from '../src'
 
 <Meta
