--- a/packages/utils/files/browser/downloadString/stories/sb.stories.mdx
+++ b/packages/utils/files/browser/downloadString/stories/sb.stories.mdx
@@ -1,5 +1,6 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs'
-import Button from '../../../../../input/Button/styles/1'
+
+import Button from '../../../../../input/Button/src'
 import Code from '../../../../../dataDisplay/Code'
 import downloadString from '../'
 import FunctionUsageExample from '../../../../../dataDisplay/showExample/FunctionUsageExample'
