--- a/packages/utils/misc/useToggle/stories/sb.stories.mdx
+++ b/packages/utils/misc/useToggle/stories/sb.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs'
 import useToggle from '..'
 
-<Meta title='Lib/utils/misc/useToggle' />
+<Meta title='Misc/Hooks/useToggle' />
 
 export const Default = (args) => {
   const [active, setActive] = useToggle()
