--- a/packages/utils/overlay/stories/sb.stories.mdx
+++ b/packages/utils/overlay/stories/sb.stories.mdx
@@ -3,7 +3,7 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs'
 import Variants from './variants'
 import Overlay from '..'
 
-<Meta title='Lib/utils/Overlay' />
+<Meta title='DataDisplay/Components/Overlay' />
 
 # Overlay
 
