--- a/packages/data/Airtable/useAirtable/stories/sb.stories.mdx
+++ b/packages/data/Airtable/useAirtable/stories/sb.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs'
 import { ListRecords, RetrieveARecord, CreateARecord } from './'
 
-<Meta title='Lib/Data/Airtable/useAirtable' />
+<Meta title='Airtable/useAirtable' />
 
 # useAirtable
 
