--- a/packages/utils/viewport/useMatchMedia/stories/sb.stories.mdx
+++ b/packages/utils/viewport/useMatchMedia/stories/sb.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs'
 import useMatchMedia from '../'
 import FunctionUsageExample from '../../../../dataDisplay/showExample/FunctionUsageExample'
 
-<Meta title='Viewport/Hooks/useMatchMedia' />
+<Meta title='Viewport/useMatchMedia' />
 
 # useMatchMedia
 
