--- a/packages/utils/gestures/component/stories/sb.stories.mdx
+++ b/packages/utils/gestures/component/stories/sb.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs'
 import Variants from './variants'
 
-<Meta title='Gestures/Components/OnSwipe' />
+<Meta title='Gestures/OnSwipe' />
 
 # OnSwipe
 
